--- a/index.html
+++ b/index.html
@@ -5,28 +5,32 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 <body>
+<div class="container">
 <h1> Bismillahir Rehman ir Raheem</h1>
 <h2>Asalamo alaykum</h2>
 <!-- Standard button -->
-<button type="button" class="btn btn-default">Default</button>
+<button type="button" class="btn btn-default">Name</button>
 
 <!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
-<button type="button" class="btn btn-primary">Primary</button>
+<button type="button" class="btn btn-primary active">Contacts</button>
 
 <!-- Indicates a successful or positive action -->
-<button type="button" class="btn btn-success">Success</button>
+<button type="button" class="btn btn-success ">Education</button>
 
 <!-- Contextual button for informational alert messages -->
-<button type="button" class="btn btn-info">Info</button>
 
-<!-- Indicates caution should be taken with this action -->
-<button type="button" class="btn btn-warning">Warning</button>
+<button type="button" class="btn btn-info">Experience</button>
+<button class="btn btn-danger"> click me</button>
+<a href="http://getbootstrap.com/css/#buttons" class="btn-info  btn-success ">new button</a>
 
-<!-- Indicates a dangerous or potentially negative action -->
-<button type="button" class="btn btn-danger">Danger</button>
-
-<!-- Deemphasize a button by making it look like a link while maintaining button behavior -->
-<button type="button" class="btn btn-link">Link</button>
+<div class="jumbotron">
+<div class="container">
+  <h1>Hello, world!</h1>
+  <p>...</p>
+  <p><a class="btn btn-primary btn-lg" href="http://yahoo.com" role="button btn-danger">Learn more</a></p>
+  </div>
+</div>
+</div>
 
 </body>
 </html>
